<resources>
    <!-- activity_main -->
    <string name="app_name">Quiz</string>
    <string name="main_text01">Test your brain with random questions!</string>
    <string name="start_btn">START</string>
    <string name="main_img">Main img</string>

    <string-array name="itemCounts">
        <item>10 Questions</item>
        <item>20 Questions</item>
        <item>30 Questions</item>
    </string-array>

    <!-- activity_quiz -->
    <string name="quiz_question">A random question is generated here!</string>
    <string name="quiz_answer">Answers: 0</string>
    <string name="quiz_score">SCORE: 0  |  Q: 0/100</string>
    <string name="quiz_timer">00:00</string>
    <string name="quiz_choice">Choice sample</string>
    <string name="quiz_points">2 pts.</string>
    <string name="quiz_number">Q1</string>
    <string name="quiz_nextButton">Check!</string>
    <string name="quiz_img">Quiz img</string>
    <string name="quiz_refresh">REFRESH</string>
    <string name="quiz_verMsg">Swipe down to refresh!</string>

    <!-- activity_result -->
    <string name="result_message">Great Job!</string>
    <string name="result_message2">You Scored</string>
    <string name="result_score">10 / 10</string>
    <string name="result_home">Main Menu</string>
    <string name="result_restart">Play Again!</string>
    <string name="result_img">Result img</string>
    <string name="main_picker">Questions</string>
    <string name="quiz_home">HOME</string>
    <string name="main_info">App info</string>
</resources>