<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/quizQuestion"
        style="@style/textShadowStyle"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/quiz_question"
        android:elevation="1dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/quiz_question"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rvChoiceItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/quizScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:text="@string/quiz_score"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/rvChoiceItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizQuestion"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/quizTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/quiz_timer"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/quizScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/quizScore"
        app:layout_constraintTop_toTopOf="@+id/quizScore" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChoiceItems"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="310dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/accent"
        android:paddingHorizontal="70dp"
        android:text="@string/quiz_nextButton"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>