<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/startImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/main_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.007"
            app:srcCompat="@drawable/main_image" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="164dp"
        android:layout_height="94dp"
        android:layout_marginTop="4dp"
        android:background="@color/background"
        android:padding="10dp"
        android:theme="@style/AppTheme.Picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startText01" />

    <TextView
        android:id="@+id/startText01"
        android:layout_width="298dp"
        android:layout_height="79dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/main_text01"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipeRefresh"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="196dp"
        android:layout_height="69dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/start_btn"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
